# sudoisbot

./: .dockerignore  .gitignore  .sudoisbot.yml  Dockerfile  Dockerfile.build  Dockerfile.test  Jenkinsfile  Makefile  README.md  build  build.sh  common.py  listener.py  oldsetup.py  poetry.toml  pyproject.toml  requirements.txt  sendmsg.py  setup.py
.github/: dependabot.yml
deb/: after-install.sh
deb/etc/systemd/system/: sudoisbot@.service
docker/proxy/: Dockerfile
docs/: poetry-bumpversion.md
docs/img/shields/: example.txt
oldproxy/: simplepirate.py
proxy/: majordomo.py  paranoidpirate.py  proxy.py  proxy_dealer.py  proxy_pubsub.py  pubsub.py
screen/: screen_sub.py
scripts/: bump-version.sh  docker-run.sh  git-tag.sh
scripts-dev/: docker-build.sh  docker-run.sh  docker.env
scripts/misc/telegram/: listener.py  tglistener.py
scripts/misc/util/: csv2json.py  json2influx.py  json2mariadb.py
scripts/misc/util/guide/: majordomo.py
sudoisbot/: __init__.py  common.py  config.py  datatypes.py  listener.py  recenttemps.py  sendmsg.py  sendtelegram.py  sendtelegram_rep.py  tglistener.py  unifi.py  unifi_clients.py
sudoisbot/apis/: unifi.py  weather_pub.py
sudoisbot/network/: broker.py  paranoidpirate.py  proxy.py  pub.py  sub.py
sudoisbot/network/guide_modified/: ppworker.py
sudoisbot/screen/: requirements.txt  screen_pub.py  screen_sub.py
sudoisbot/sensors/: arduino_current.ino  arduino_rain.ino  current.py  dht.c  old.txt  rain_pub.py  sensors.py  temp_pub.py
sudoisbot/sink/: graphtemps.py  migrations.py  models.py  newdb.py  notifier.py  simplestate.py  sink.py
sudoisbot/temps/: exceptions.py  graphtemps.py  rain_pub.py  sensors.py  temp_pub.py
sudoisbot/util/: csv2db.py  csv2influx.py  fromfirstlog.py  notifier.py  pubtest.py  suball.py
sudoisbot/util/oldproxy/: paranoidpirate.py
sudoisbot/weather/: publisher.py  weather_pub.py
sudoisscreen/: screen_pub.py  screen_sub.py
sudoistemps/: graphtemps.py  simplestate.py  temper_pub.py  temper_sub.py
sudoisunifi/: unifi.py
sudoiszmq/: README.md  broker.py  majordomo.py  oldpirate.py  paranoidpirate.py  proxy.py  proxy_dealer.py  proxy_pubsub.py  pub.py  sub.py
sudoiszmq/guide_modified/: lpclient.py  ppworker.py
temper/: temper_sub.py
temps/: graphtemps.py  simplestate.py  temper_csv_converter.py  temper_pub.py  temper_sub.py  updatetemps.sh
tests/: test_sudoisbot.py  test_version.py
unifi/: unifi.py
