[tool.poetry]
name = "sudoisbot"
version = "0.4.9"
description = "a home automation and monitoring system written to learn zmq"
authors = ["Ben Kristinsson <ben@lokun.is>"]
homepage = "https://www.sudo.is"
repository = "https://git.sudo.is/ben/sudoisbot"
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
PyYAML = "^6.0"
pyzmq = "^23.2.1"
sudoistemper = "^0.1.0"
peewee = "^3.15.2"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
python-telegram-bot = { version = "^13.1", optional = true }
PyMySQL = "^1.0.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
isort = "^5.10.1"
poethepoet = "^0.16.2"
poetry-bumpversion = "^0.2.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"

[tool.poetry.extras]
telegram =  ["python-telegram-bot"]

[tool.poetry.scripts]
sudoisbot = "sudoisbot:main"
ruok_sudoisbot = "sudoisbot:ruok"


[tool.poetry_bumpversion.file."sudoisbot/__init__.py"]
# install with either:
# $POETRY_HOME/bin/pip install --user poetry-bumpversion
# poetry add -D poetry-bumpversion
# poetry self add poetry-bumpversion

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
