[tool.poetry]
name = "sudoisbot"
version = "0.5.1"
description = "a home automation and monitoring system written to learn zmq"
authors = ["Ben Kristinsson <ben@lokun.is>"]
homepage = "https://www.sudo.is"
repository = "https://git.sudo.is/ben/sudoisbot"
license = "BSD-3-Clause-No-Military-License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = ">=0.6,<0.8"
PyYAML = "^6.0"
pyzmq = "^24.0.1"
sudoistemper = "^0.1.0"
peewee = "^3.15.3"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
python-telegram-bot = { version = "^13.1", optional = true }
PyMySQL = "^1.0.2"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
isort = "^5.10.1"
poethepoet = "^0.16.2"
flake8 = "^5.0.4"
pytest = "^7.1.3"

[tool.poetry.extras]
telegram =  ["python-telegram-bot"]

[tool.poetry.scripts]
sudoisbot = "sudoisbot:main"
ruok_sudoisbot = "sudoisbot:ruok"

# install with either:
# $POETRY_HOME/bin/pip install --user poetry-bumpversion
# poetry self add poetry-bumpversion
[tool.poetry_bumpversion.file."sudoisbot/__init__.py"]

[build-system]
requires = ["poetry-core>=1.2.1"]
build-backend = "poetry.core.masonry.api"
